--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include README.md LICENSE
-include src/nonogram/*.json
-include src/nonogram/*.csv
+include libpuz/nonogram/*.json
+include libpuz/nonogram/*.csv
