--- a/pytest.ini
+++ b/pytest.ini
@@ -2,11 +2,11 @@
 python_files = *Test.py *test.py
 python_classes = *Test *test
 python_functions = *test *Test
-norecursedirs = .git src
+norecursedirs = .git libpuz 
 log_file = pytest-logs/logs.txt
 log_file_date_format = %Y-%m-%dT%H:%M:%S
 log_file_format = %(asctime)s %(levelname)s %(message)s
 log_level = INFO
 minversion = 3.0
-testpaths = tst
+testpaths = libpuz/tst
 xfail_strict = True
